added failsave to heapspace checking